syntax = "proto3";

option csharp_namespace = "Makc2024.Dummy.Writer.Infrastructure.DummyItem.Grpc";

package Writer;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service WriterDummyItemGrpcService {
    rpc Create (DummyItemCreateActionGrpcRequest) returns (DummyItemGetActionGrpcReply);
    rpc Delete (DummyItemDeleteActionGrpcRequest) returns (google.protobuf.Empty);
    rpc Get (DummyItemGetActionGrpcRequest) returns (DummyItemGetActionGrpcReply);
    rpc GetList (DummyItemGetListActionGrpcRequest) returns (DummyItemGetListActionGrpcReply);
    rpc Update (DummyItemUpdateActionGrpcRequest) returns (DummyItemGetActionGrpcReply);
}

message ActionGrpcRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message DummyItemCreateActionGrpcRequest {
    string name = 1;
}

message DummyItemDeleteActionGrpcRequest {
    int64 id = 1;
}

message DummyItemGetActionGrpcRequest {
    int64 id = 1;
}

message DummyItemGetActionGrpcReply {
    int64 id = 1;
    string name = 2;
}

message DummyItemGetListActionGrpcRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message DummyItemGetListActionGrpcRequest {
    ActionGrpcRequestPage page = 1;
    DummyItemGetListActionGrpcRequestFilter filter = 2;
}

message DummyItemGetListActionGrpcReplyItem {
    int64 id = 1;
    string name = 2;
}

message DummyItemGetListActionGrpcReply {
    int64 total_count = 1;
    repeated DummyItemGetListActionGrpcReplyItem items = 2;
}

message DummyItemUpdateActionGrpcRequest {
    int64 id = 1;
    string name = 2;
}